--- a/assets/css/drt.css
+++ b/assets/css/drt.css
@@ -1,5 +1,5 @@
 .hero-section {
-    background: url('/assets/delhi/drt-hero.jpg') center/cover no-repeat;
+    background: url('../delhi/drt-hero.jpg') center/cover no-repeat;
     height: 60vh;
     display: flex;
     align-items: center;
